# rust-study-series

./: .gitignore  README.md  default.nix  flake.nix
AI/ai-agent-eval-harness/: .env.example  .gitignore  .tdd-config.json  Cargo.toml  Makefile.toml  README.md  eval-harness.toml  rustfmt.toml
AI/ai-agent-eval-harness/desktop/: Cargo.toml  build.rs  tauri.conf.json
AI/ai-agent-eval-harness/docs/: .tdd-state.json  traceability-matrix.md
AI/ai-agent-eval-harness/escalations/: high_severity_customer_complaint.txt
AI/ai-agent-eval-harness/eval_data/: eval_harness.db
AI/ai-agent-eval-harness/reporting_logs/: evaluation_01bbffef-d9d7-4417-b3fb-93fa81e21d77_20260410_081824.json  evaluation_1c745510-2419-4e53-ac45-f4019e8be02f_20260410_093553.json  evaluation_2855a9fc-48f3-4837-ba97-3621252321f4_20260410_081010.json  evaluation_2a230d80-8a4e-455b-aaa3-85b4a561e7f7_20260410_081824.json  evaluation_2a583ad5-9f46-4472-a0ea-6a28c9e1b383_20260410_093553.json  evaluation_2b5fbc5b-19f7-4189-85c2-f701a7ffc658_20260410_093553.json  evaluation_36d9d11a-04bf-49e1-8459-1bb46ce29636_20260410_064116.json  evaluation_425b149c-be37-423a-a5f6-67c713c04544_20260410_081808.json  evaluation_44ca45b7-c3be-48f5-9198-a26665ac13a4_20260410_081825.json  evaluation_4d4f57b9-9dbc-4231-9da6-16f49248ef5b_20260410_093553.json  evaluation_4dbf6c1a-c45c-4562-877a-d10f01cc83d9_20260410_081824.json  evaluation_508572a7-0996-46b4-86e0-1c5d6b1f09a2_20260410_093553.json  evaluation_5454e756-33f4-43b9-9257-004a0b671549_20260410_064116.json  evaluation_5620a8e1-1049-49d6-a261-375e7eecca6c_20260410_093553.json  evaluation_5b8ddc98-2c8c-4915-a1a7-2445e18188e6_20260410_081010.json  evaluation_5d369712-f76d-4c31-9ba6-2c10f47c4d8a_20260410_093553.json  evaluation_5e6d0237-336a-485e-9755-706bdcd07fde_20260410_081825.json  evaluation_63173f71-b205-40d7-b93b-2627042da742_20260410_081825.json  evaluation_6f59b402-8f14-4f62-a4fc-504a76535899_20260410_081010.json  evaluation_76384cd9-76f2-4f78-a034-b6ac5728b385_20260410_081824.json  evaluation_77e18f0a-aaa1-43ee-84c0-c1e98d91eb54_20260410_081808.json  evaluation_79e23c19-388e-40ab-95e4-80f1f648511a_20260410_075805.json  evaluation_8dd21f66-4712-40f4-b080-a10d609d0e3a_20260410_081808.json  evaluation_91723890-a2f6-4fa8-a6e1-10b892f8dac8_20260410_093553.json  evaluation_a3d8f952-0bd5-4c2b-a1f5-5f663d569731_20260410_064116.json  evaluation_af44569b-a670-4569-ad07-d11b7b4852bd_20260410_081825.json  evaluation_b73a396d-52e4-488f-bbed-e7df61bd13cd_20260410_093553.json  evaluation_bf4189bf-2d83-4b9d-a66d-50c36092de37_20260410_081808.json  evaluation_c4eb34c4-2aa8-45e7-859d-f61c967ec3d5_20260410_081808.json  evaluation_c69ce252-1044-40fe-8097-a8431b8897eb_20260410_081808.json  evaluation_cf678d7c-9c65-4a5a-a6dc-b0fa4a9bd682_20260410_081823.json  evaluation_d06eb151-8015-4e56-adac-f18ea09e2616_20260410_081808.json  evaluation_d48654df-6c00-40ef-9130-00b1c3fa3362_20260410_081818.json  evaluation_d515a2df-8ae0-4151-9b04-fcd83d8bb09b_20260410_081808.json  evaluation_d59c1974-ecc8-45eb-864d-9908116c92fc_20260410_081808.json  evaluation_dbe9bb4f-07bd-45f6-8578-3e63d6f4db62_20260410_064116.json  evaluation_e17777a6-f7e1-4a37-bb68-8738feef09f5_20260410_064116.json  evaluation_e4cb6f22-973e-453c-882f-1d84d36ca7ef_20260410_081010.json  evaluation_f164c70b-ce85-4a70-8c31-660422008a66_20260410_081010.json  evaluation_f2b08d1a-ea8e-4013-ae89-94c281bf1578_20260410_081808.json  (+4 more)
AI/ai-agent-eval-harness/reporting_trajectories/: trajectory_01bbffef-d9d7-4417-b3fb-93fa81e21d77_20260410_081824.json  (+40 more)
AI/ai-agent-eval-harness/src/: lib.rs  (+1 more)
AI/azure-foundry-embedding-demo/: .dockerignore  .env.example  Cargo.toml  README.md
AI/chatbot-eval-by-rust/: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md
AI/ollama-rust-client/: Cargo.toml  README.md
AI/openai-rust-client/: Cargo.toml  README.md
AI/rust-qdrant-vector-rag/: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  build_check.md
AI/windows-foundry-local-exmaple/: Cargo.toml  README.md
AWS/aws-sdk-dynamodb-v028/: Cargo.toml  README.md
CLI/bill-manager/: Cargo.toml
CLI/check-date/: Cargo.toml
CLI/contact-manager/: Cargo.toml  README.md
CLI/contact_manager/: Cargo.toml
CLI/onion-arch-example/: Cargo.toml  README.md
Cache/caching-with-redis/: Cargo.toml  Dockerfile  Makefile.toml  README.md
Cache/caching_with_redis/: .dockerignore  Cargo.toml  docker-compose.yml
Database/actix-sqlx-mysql/: .env.example  ARCHITECTURE.md  Cargo.toml  README.md
Database/axum-sqlx-postgres/: .dockerignore  .env.example  Cargo.toml  README.md  docker-compose.yaml
Database/diesel-mysql-init/: Cargo.toml  README.md
Database/diesel-postgres-init/: Cargo.toml  Dockerfile  README.md  diesel.toml
Database/diesel-postgres-workspace/: CHANGES.md  Cargo.toml  README.md  SUMMARY.md  TROUBLESHOOTING.md  test_api.sh
Database/diesel-sqlite-init/: Cargo.toml  README.md
Database/qdrant-workspace-for-lib/: .env.example  .gitignore  Cargo.toml  README.md
HW/webcam-detector/: .gitignore  Cargo.toml  Makefile.toml  README.md
Patterns/clean-architecture/: Cargo.toml  MAKEFILE_GUIDE.md  Makefile.toml  QUICK_START.md  README.md  SUMMARY.md
TUI/ratatui-diary/: .gitignore  COVERAGE.md  Cargo.toml  README.md  lcov.info  rustc-ice-2026-02-14T21_32_15-13671.txt  rustc-ice-2026-02-14T21_32_18-13711.txt  rustc-ice-2026-02-14T21_32_42-13882.txt  rustc-ice-2026-02-14T21_32_48-13898.txt  rustc-ice-2026-02-14T21_33_05-13966.txt  rustc-ice-2026-02-14T21_33_19-14072.txt  rustc-ice-2026-02-14T21_34_56-14388.txt  rustc-ice-2026-02-14T21_38_23-15048.txt  rustc-ice-2026-02-14T21_38_27-15081.txt  rustc-ice-2026-02-14T21_38_48-15127.txt  rustc-ice-2026-02-14T21_38_51-15166.txt  rustc-ice-2026-02-14T21_39_32-15440.txt  rustc-ice-2026-02-14T21_39_47-15476.txt
Web/world-clock/: Cargo.toml  README.md
ai/ollama-rust-client/: Cargo.toml
ai/rust-llm-actor-system/: .env.example  .env.sample  .envrc  .gitignore  Cargo.toml  README.md
applications/onion-arch-example/: Cargo.toml  users.db
aws-lambda/lambda_runtime_v01/: Cargo.toml
(+3493 files in other folders)
