[package]
  edition = "2021"
  name    = "ai-agent-eval-harness"
  version = "0.1.0"

[[bin]]
  name = "eval-harness"
  path = "src/main.rs"

[dependencies]
  anyhow             = "1"
  chrono             = {features = ["serde"], version = "0.4"}
  clap               = {features = ["derive"], version = "4"}
  colored            = "2"
  dotenvy            = "0.15"
  rand               = "0.8"
  reqwest            = {default-features = false, features = ["json", "rustls-tls"], version = "0.12"}
  serde              = {features = ["derive"], version = "1"}
  serde_json         = "1"
  serde_yaml         = "0.9"
  thiserror          = "1"
  tokio              = {features = ["full"], version = "1"}
  tracing            = "0.1"
  tracing-subscriber = "0.3"
  uuid               = {features = ["v4"], version = "1"}

[dev-dependencies]
  tempfile = "3"
