[workspace]
  resolver = "2"
  members  = [
    "crates/agent-models",
    "crates/execution-tools",
    "crates/data-scenarios",
    "crates/domains",
    "crates/agent-core",
    "crates/reporting",
    "crates/scoring",
    "crates/scoring-llm-judge",
    "crates/execution-fault-injection",
    "crates/execution-multi-turn",
    "crates/execution",
    "crates/eval-harness",
  ]

[workspace.package]
  edition = "2021"
  version = "0.1.0"

[workspace.dependencies]
  # external
  anyhow             = "1"
  chrono             = {features = ["serde"], version = "0.4"}
  clap               = {features = ["derive"], version = "4"}
  colored            = "2"
  dotenvy            = "0.15"
  rand               = "0.8"
  reqwest            = {default-features = false, features = ["json", "rustls-tls"], version = "0.12"}
  serde              = {features = ["derive"], version = "1"}
  serde_json         = "1"
  serde_yaml         = "0.9"
  thiserror          = "1"
  tokio              = {features = ["full"], version = "1"}
  tracing            = "0.1"
  tracing-subscriber = "0.3"
  uuid               = {features = ["v4"], version = "1"}
  tempfile           = "3"
  ratatui            = "0.28"
  crossterm          = "0.28"
  axum               = "0.7"
  # workspace crates
  agent-models              = {path = "crates/agent-models"}
  execution-tools           = {path = "crates/execution-tools"}
  data-scenarios            = {path = "crates/data-scenarios"}
  domains                   = {path = "crates/domains"}
  agent-core                = {path = "crates/agent-core"}
  reporting                 = {path = "crates/reporting"}
  scoring                   = {path = "crates/scoring"}
  scoring-llm-judge         = {path = "crates/scoring-llm-judge"}
  execution-fault-injection = {path = "crates/execution-fault-injection"}
  execution-multi-turn      = {path = "crates/execution-multi-turn"}
  execution                 = {path = "crates/execution"}
