[workspace]
  exclude = ["desktop"]
  members = [
    "crates/agent-models",
    "crates/execution-tools",
    "crates/data-scenarios",
    "crates/domains",
    "crates/agent-core",
    "crates/reporting",
    "crates/scoring",
    "crates/scoring-llm-judge",
    "crates/execution-fault-injection",
    "crates/execution-multi-turn",
    "crates/execution",
    "crates/eval-harness",
  ]
  resolver = "2"

  [workspace.package]
    edition = "2021"
    version = "0.1.0"

  [workspace.dependencies]
    # external
    anyhow             = "1"
    axum               = "0.7"
    chrono             = {features = ["serde"], version = "0.4"}
    clap               = {features = ["derive"], version = "4"}
    colored            = "2"
    crossterm          = "0.28"
    dotenvy            = "0.15"
    rand               = "0.8"
    ratatui            = "0.28"
    reqwest            = {default-features = false, features = ["json", "rustls-tls"], version = "0.12"}
    serde              = {features = ["derive"], version = "1"}
    serde_json         = "1"
    serde_yaml         = "0.9"
    tempfile           = "3"
    thiserror          = "1"
    tokio              = {features = ["full"], version = "1"}
    toml               = "0.8"
    tracing            = "0.1"
    tracing-subscriber = "0.3"
    uuid               = {features = ["v4"], version = "1"}
    # workspace crates
    agent-core                = {path = "crates/agent-core"}
    agent-models              = {path = "crates/agent-models"}
    data-scenarios            = {path = "crates/data-scenarios"}
    domains                   = {path = "crates/domains"}
    execution                 = {path = "crates/execution"}
    execution-fault-injection = {path = "crates/execution-fault-injection"}
    execution-multi-turn      = {path = "crates/execution-multi-turn"}
    execution-tools           = {path = "crates/execution-tools"}
    reporting                 = {path = "crates/reporting"}
    scoring                   = {path = "crates/scoring"}
    scoring-llm-judge         = {path = "crates/scoring-llm-judge"}
