[package]
  edition = "2024"
  name    = "ollama-rust-client"
  version = "0.1.0"

[dependencies]
  reqwest    = {version = "0.12.15", features = ["json", "stream"]}
  serde      = {version = "1.0.219", features = ["derive"]}
  serde_json = "1.0.140"
  tokio      = {version = "1.44.2", features = ["full"]}
  futures-util = "0.3"
  tokio-stream = "0.1"
  axum = "0.7.4"
  tower = "0.4"
  tower-http = { version = "0.5", features = ["fs", "trace"] }
  tracing = "0.1"
  tracing-subscriber = { version = "0.3", features = ["env-filter"] }
