[package]
name = "openai-rust-client"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6.20"
axum-extra = "0.7.7"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
futures = "0.3.28"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
dotenv = "0.15.0"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
thiserror = "1.0"
