[package]
  edition = "2021"
  name    = "rust-qdrant-vector-rag"
  version = "0.1.0"

[dependencies]
  # Web framework
  actix-cors = "0.7"
  actix-web  = "4.4"

  # Async runtime
  tokio = {features = ["full"], version = "1.35"}

  # Multipart form handling
  actix-multipart = "0.6"
  futures-util    = "0.3"

  # Serialization
  serde      = {features = ["derive"], version = "1.0"}
  serde_json = "1.0"

  # HTTP client
  reqwest = {features = ["json", "stream"], version = "0.11"}

  # Vector database
  qdrant-client = "1.7"

  # Configuration
  config  = "0.14"
  dotenvy = "0.15"

  # Error handling
  anyhow    = "1.0"
  thiserror = "1.0"

  # Logging
  tracing            = "0.1"
  tracing-actix-web  = "0.7"
  tracing-subscriber = {features = ["env-filter", "json"], version = "0.3"}

  # Markdown parsing
  pulldown-cmark = "0.9"

  # UUID generation
  uuid = {features = ["v4", "serde"], version = "1.6"}

  # Date/time handling
  chrono = {features = ["serde"], version = "0.4"}

  # Async traits
  async-trait = "0.1"

  # URL parsing and validation
  url = "2.5"

  # System utilities
  num_cpus = "1.16"

  # Random number generation
  rand = "0.8"

  # Futures utilities
  futures = "0.3"

[dev-dependencies]
  # Testing utilities
  tokio-test   = "0.4"
  tracing-test = "0.2"
  
  # HTTP client for testing
  reqwest = { version = "0.11", features = ["json", "multipart"] }
  
  # Test utilities
  tempfile = "3.8"
  wiremock = "0.5"
  urlencoding = "2.1"
