[package]
name = "windows-foundry-local-example"
version = "0.1.0"
edition = "2024"
description = "A simple example of using the Foundry Local Rust SDK"

[dependencies]
foundry-local = "0.1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
env_logger = "0.11"
