[package]
  description = "A simple example of using the Foundry Local Rust SDK"
  edition     = "2024"
  name        = "windows-foundry-local-example"
  version     = "0.1.0"

[dependencies]
  anyhow        = "1.0.100"
  env_logger    = "0.11.8"
  foundry-local = "0.1"
  reqwest       = {features = ["json"], version = "0.12.24"}
  serde_json    = "1.0.145"
  tokio         = {features = ["full"], version = "1.48.0"}
