[profile.dev]
  debug     = true
  opt-level = 0

[profile.release]
  debug     = false
  opt-level = 3

[package]
  edition = "2024"
  name    = "aws-sdk-dynamodb-v028"
  version = "0.1.0"


[dependencies]
  aws-config       = "1.5.10"
  aws-sdk-dynamodb = "1.53.0"
  tokio            = {version = "1.44.2", features = ["full"]}
