[profile.dev]
  codegen-units = 256
  debug         = true
  incremental   = true
  opt-level     = 1

[profile.release]
  codegen-units = 1
  debug         = false
  lto           = "thin"
  opt-level     = 3

[package]
  authors = ["Mingyu Choo <mingyuchoo@gmail.com>"]
  edition = "2024"
  name    = "bill-manager"
  version = "0.1.0"


[dependencies]
