[profile.dev]
  codegen-units = 256
  debug         = true
  incremental   = true
  opt-level     = 1

[profile.release]
  codegen-units = 1
  debug         = false
  lto           = "thin"
  opt-level     = 3

[package]
  edition = "2024"
  name    = "check-date"
  version = "1.0.0"

[dependencies]
  regex = "1.11.1"
  time  = "0.3.36"
