[profile.dev]
  codegen-units = 256
  debug         = true
  incremental   = true
  opt-level     = 1

[profile.release]
  codegen-units = 1
  debug         = false
  lto           = "thin"
  opt-level     = 3

[package]
  authors = ["Mingyu choo <mingyuchoo@gmail.com"]
  edition = "2024"
  name    = "contact-manager"
  version = "0.1.0"

[dependencies]
  structopt = "0.3.26"
  thiserror = "2.0.0"

[[bin]]
  name = "contact-manager"
  path = "src/main.rs"
