[package]
  authors = ["mingyuchoo <mingyuchoo@naver.com>"]
  edition = "2024"
  name    = "caching-with-redis"
  version = "0.1.0"

[dependencies]
  # Redis 클라이언트
  redis = {features = ["tokio-comp", "connection-manager"], version = "0.24"}

  # 비동기 처리
  tokio = {features = ["full"], version = "1"}

  # 에러 처리
  anyhow    = "1"
  thiserror = "1"

  # 직렬화
  bincode    = "1.3"
  serde      = {features = ["derive"], version = "1"}
  serde_json = "1"

  # 해시 생성
  hex  = "0.4"
  sha2 = "0.10"

  # 수치 계산
  ndarray = "0.15"

  # HTTP 클라이언트 (Azure OpenAI API)
  reqwest = {features = ["json"], version = "0.11"}

  # 로깅
  env_logger = "0.11"
  log        = "0.4"

  # CLI
  clap = {features = ["derive"], version = "4"}

  # 압축
  flate2 = "1"

  # 환경 변수 로딩
  dotenvy = "0.15"

  # 유틸
  uuid = {features = ["v4"], version = "1"}

[dev-dependencies]
  criterion  = "0.5"
  tokio-test = "0.4"
