[package]
name = "caching_with_redis"
version = "0.1.0"
edition = "2024"
authors = ["mingyuchoo <mingyuchoo@naver.com>"]

[dependencies]
# Redis 클라이언트
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# 비동기 처리
tokio = { version = "1", features = ["full"] }

# 에러 처리
anyhow = "1"
thiserror = "1"

# 직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# 해시 생성
sha2 = "0.10"
hex = "0.4"

# 수치 계산
ndarray = "0.15"

# HTTP 클라이언트 (Azure OpenAI API)
reqwest = { version = "0.11", features = ["json"] }

# 로깅
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }

# 압축
flate2 = "1"

# 환경 변수 로딩
dotenvy = "0.15"

# 유틸
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
