[package]
  authors = ["Mingyu Choo <mingyuchoo@gmail.com>"]
  edition = "2024"
  name    = "actix-sqlx-mysql"
  version = "0.1.0"

[dependencies]
  actix-web = "4.9"
  sqlx      = {version = "0.8.2", features = ["mysql", "runtime-actix-native-tls"]}

[profile.dev]
  debug     = true
  opt-level = 0

[profile.release]
  debug     = false
  opt-level = 3
