[package]
  authors = ["Mingyu Choo <mingyuchoo@gmail.com>"]
  edition = "2024"
  name    = "actix-sqlx-mysql"
  version = "0.1.0"

[dependencies]
  actix-web = "4.9"
  sqlx      = {version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"]}

[profile.dev]
  codegen-units = 256
  debug         = true
  incremental   = true
  opt-level     = 1

[profile.release]
  codegen-units = 1
  debug         = false
  lto           = "thin"
  opt-level     = 3
