[package]
  authors = ["Mingyu Choo <mingyuchoo@gmail.com>"]
  edition = "2024"
  name    = "actix-sqlx-mysql"
  version = "0.1.0"

[lib]
  name = "actix_sqlx_mysql"
  path = "src/lib.rs"

[[bin]]
  name = "actix-sqlx-mysql"
  path = "src/main.rs"

[dependencies]
  actix-web   = "4.9"
  async-trait = "0.1"
  dotenv      = "0.15"
  env_logger  = "0.11"
  log         = "0.4"
  serde       = {version = "1.0", features = ["derive"]}
  serde_json  = "1.0"
  sqlx        = {version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"]}
  tokio       = {version = "1", features = ["full"]}

[profile.dev]
  codegen-units = 256
  debug         = true
  incremental   = true
  opt-level     = 1

[profile.release]
  codegen-units = 1
  debug         = false
  lto           = "thin"
  opt-level     = 3
