[package]
  edition = "2024"
  name    = "clean_architecture"
  version = "0.1.0"

[dependencies]
  anyhow             = "1"
  argon2             = "0.5.3"
  async-trait        = "0.1.89"
  axum               = "0.8"
  axum-extra         = {features = ["cookie"], version = "0.10"}
  chrono             = {features = ["serde"], version = "0.4.42"}
  dotenvy            = "0.15"
  secrecy            = {features = ["serde"], version = "0.10"}
  serde              = {features = ["derive"], version = "1.0"}
  serde_json         = "1.0"
  sqlx               = {features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"], version = "0.8"}
  thiserror          = "2.0"
  time               = "0.3"
  tokio              = {features = ["full"], version = "1"}
  tower              = "0.5"
  tower-http         = {features = ["trace", "cors"], version = "0.6"}
  tracing            = "0.1"
  tracing-subscriber = {features = ["env-filter", "fmt", "std", "json"], version = "0.3"}
  uuid               = {features = ["serde", "v4"], version = "1.18.1"}
