[package]
  authors = ["Mingyu Choo <mingyuchoo@gmail.com>"]
  edition = "2024"
  name    = "diesel-mysql-init"
  version = "0.1.0"


[dependencies]
  diesel  = {version = "2.2.5", features = ["mysql"]}
  dotenvy = "0.15.7"

[[bin]]
  doc  = false
  name = "show_posts"

[lib]
  doc = false

[profile.dev]
  debug     = true
  opt-level = 0

[profile.release]
  debug     = false
  opt-level = 3
