[package]
  authors = ["Mingyu Choo <mingyuchoo@gmail.com>"]
  edition = "2024"
  name    = "diesel-mysql-init"
  version = "0.1.0"


[dependencies]
  diesel  = {version = "2.2.5", features = ["mysql"]}
  dotenvy = "0.15.7"

[[bin]]
  doc  = false
  name = "show_posts"

[lib]
  doc = false

[profile.dev]
  codegen-units = 256
  debug         = true
  incremental   = true
  opt-level     = 1

[profile.release]
  codegen-units = 1
  debug         = false
  lto           = "thin"
  opt-level     = 3
