[package]
  authors = ["Mingyu Choo <mingyuchoo@gmail.com>"]
  edition = "2024"
  name    = "diesel-postgres-init"
  version = "0.3.0"

[dependencies]
  diesel  = {version = "2.2.5", features = ["postgres"]}
  dotenvy = "0.15.7"

[profile.dev]
  codegen-units = 256
  debug         = true
  incremental   = true
  opt-level     = 1

[profile.release]
  codegen-units = 1
  debug         = false
  lto           = "thin"
  opt-level     = 3
