[workspace]
  members  = ["domain", "application", "adapters", "infrastructure", "main"]
  resolver = "2"
  [workspace.dependencies]
    diesel  = {version = "2.3.2", features = ["postgres", "postgres_backend", "r2d2"]}
    dotenvy = "0.15.7"
    axum    = "0.7"
    tokio   = {version = "1", features = ["full"]}
    tower   = "0.4"
    tower-http = {version = "0.5", features = ["fs", "cors"]}
    serde   = {version = "1.0", features = ["derive"]}
    serde_json = "1.0"
