[workspace]
  members  = ["collection-exists","create-collection", "delete-collection"]
  resolver = "2"
  [workspace.dependencies]
    create-collection = {path = "./create-collection"}
  [workspace.package]
    authors = ["Mingyu Choo <mingyuchoo@gmail.com>"]
    edition = "2024"
    version = "0.1.0"
