[package]
  edition = "2024"
  name    = "ratatui-diary"
  version = "0.1.0"

[dependencies]
  chrono              = "0.4"
  crossterm           = "0.27"
  dirs                = "5.0"
  ratatui             = "0.27"
  strip-ansi-escapes  = "0.2"
  termimad            = "0.34"

[dev-dependencies]
  tempfile = "3.8"
