[package]
name = "world-clock"
version = "0.1.0"
edition = "2024"
description = "여러 타임존의 현재 시간을 표시하는 세계 시계 CLI 앱"
license = "MIT"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
http-body-util = "0.1"
hyper = "1"
predicates = "3"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
