[package]
  edition = "2024"
  name    = "rust-llm-actor-system"
  version = "0.1.0"

[dependencies]
  actix-web          = "4.5.1"
  actix-files        = "0.6.5"
  anyhow             = "1.0"
  chrono             = { version = "0.4", features = ["serde"] }
  env_logger         = "0.11.3"
  handlebars         = { version = "5.1.0", features = ["dir_source"] }
  serde              = { version = "1.0", features = ["derive"] }
  serde_json         = "1.0"
  tokio              = { version = "1.44.2", features = ["full"] }
  tracing            = "0.1"
  tracing-subscriber = "0.3"
  uuid               = { version = "1.7.0", features = ["v4", "serde"] }
  dotenv             = "0.15"
  reqwest            = { version = "0.11", features = ["json"] }
