[package]
  edition = "2024"
  name    = "onion-arch-example"
  version = "0.1.0"

[dependencies]
  rusqlite = "0.29"
  uuid     = {version = "1", features = ["v4"]}

  # Web UI dependencies
  axum       = {version = "0.7", features = ["macros"]}
  hyper      = "1"
  serde      = {version = "1.0", features = ["derive"]}
  serde_json = "1.0"
  tokio      = {version = "1.37", features = ["full"]}
